<resources>
    <string name="app_name">CS4520TeamProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    // group information activity
    <string name="groupInformation_text_Resort">Ski Resort Name</string>
    <string name="groupInformation_text_host">Host:</string>
    <string name="groupInformation_text_hostName">Apple_0612</string>
    <string name="groupInformation_text_contact">Contact:</string>
    <string name="groupInformation_text_contactDetail">Apple@gmail.com</string>
    <string name="groupInformation_text_location">Location:</string>
    <string name="groupInformation_text_distanceNumber">14.2mile</string>
    <string name="groupInformation_text_members">Members:</string>
    <string name="groupInformation_text_joined">Joined:</string>
    <string name="groupInformation_text_joinedNumber">4</string>
    <string name="groupInformation_text_joinedOutOf">out of</string>
    <string name="groupInformation_text_joinedTotal">7</string>
    <string name="groupInformation_text_date">Date:</string>
    <string name="groupInformation_text_dateDetail">06/22/2022</string>
    <string name="groupInformation_text_averageCost">Average Cost:</string>
    <string name="groupInformation_text_averageCostNumber">$100/person</string>
    <string name="groupInformation_text_note">Note:</string>
    <string name="groupInformation_text_noteDetail">It will be a two hour trip. Please bring your IDs for checking the hotel</string>
    <string name="groupInformation_button_join">JOIN</string>


    //Account joined group Information
    <string name="joinedGroup_text_skiResort">Blue Hill Ski Area</string>
    <string name="joinedGroup_text_hostName">Banana_0613</string>
    <string name="joinedGroup_text_date">06/27/2022</string>
    <string name="joinedGroup_text_joined">4</string>
    <string name="joinedGroup_text_outOf">Out of</string>
    <string name="joinedGroup_text_capacity">6</string>
    <string name="joinedGroup_button_quit">Quit</string>
    <string name="joinedGroup_button_detail">Detail</string>
    <string name="joinedGroup_button_joinedAGroup">Join a Group</string>
    <string name="joinedGroup_text_notFound">Oops! No joined group found...</string>


    //Account created group Information
    <string name="createdGroup_text_skiResort">Pats Peak Ski Area</string>
    <string name="createdGroup_text_hostName">Apple_0612</string>
    <string name="createdGroup_text_date">06/22/2022</string>
    <string name="createdGroup_text_joined">4</string>
    <string name="createdGroup_text_outOf">Out of</string>
    <string name="createdGroup_text_capacity">7</string>
    <string name="createdGroup_text_notFound">Oops! No created group found...</string>
    <string name="createdGroup_button_edit">Edit</string>
    <string name="createdGroup_button_delete">Delete</string>
    <string name="createdGroup_button_createMyGroup">Create My Group</string>

    // Edit Group
    <string name="editGroup_text_destination">Destination</string>
    <string name="editGroup_text_host">Host:</string>
    <string name="editGroup_text_contact">Contact:</string>
    <string name="editGroup_text_location">Location:</string>
    <string name="editGroup_text_members">Members:</string>
    <string name="editGroup_text_date">Date</string>
    <string name="editGroup_text_total_members">Total members:</string>
    <string name="editGroup_text_current_members">Current members:</string>
    <string name="editGroup_text_avg_cost">Average Cost:</string>
    <string name="editGroup_text_note">Note:</string>
    <string name="editGroup_button_save">Save</string>


    //Account Information
    <string name="accountInformation_text_email">Email:</string>
    <string name="accountInformation_text_emailDetail">Apple@gmail.com</string>
    <string name="accountInformation_text_phone">Phone:</string>
    <string name="accountInformation_text_phoneDetail">(888)-888-8888</string>
    <string name="accountInformation_text_name">Apple_0612</string>
    <string name="accountInformation_text_bio">Bio:</string>
    <string name="accountInformation_text_bioDetail">I am so happy to be here! ^_^</string>
    <string name="accountInformation_button_editProfile">Edit Profile</string>
    <string name="accountInformation_button_logOut">Log Out</string>
    <string name="accountInformation_button_created">Created</string>
    <string name="accountInformation_button_joined">Joined</string>
    <string name="accountInformation_button_joinedList">View My Joined List</string>
    <string name="accountInformation_button_createdList">View My Created List</string>


    //Edit profile
    <string name="editProfile_text_name">Name:</string>
    <string name="editProfile_text_hint_name">Edit your name!</string>
    <string name="editProfile_text_email">Email:</string>
    <string name="editProfile_text_phone">Phone:</string>
    <string name="editProfile_text_bio">Bio:</string>
    <string name="editProfile_text_hint_bio">Edit your bio!</string>
    <string name="editProfile_button_save">Save</string>

    // Display Avatar
    <string name="displayAvatar_button_retake">Retake</string>
    <string name="displayAvatar_button_upload">Select</string>

    //Account joined group Information
    <string name="skiResortCGroup">Pats Peak Ski Area</string>
    <string name="hostNameCGroup">Apple_0612</string>
    <string name="dateCGroup">06/22/2022</string>
    <string name="joinedCGroup">4</string>
    <string name="outOfCGroup">Out of</string>
    <string name="capacityCGroup">7</string>
    <string name="editCGroup">Edit</string>
    <string name="deleteCGroup">Delete</string>

    // login page
    <string name="login_text_title">Please Login</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_login">Login</string>
    <string name="login_text_signup">Don\'t have an account?</string>
    <string name="login_button_register">Sign up</string>

    // register page
    <string name="register_text_title">Please Sign Up</string>
    <string name="register_hint_mobile">Mobile</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_confirm_email">Confirm Password</string>
    <string name="register_button_login">Sign in</string>
    <string name="register_text_signup">Already have an account</string>
    <string name="register_button_register">Sign up</string>
    <string name="title_activity_groups">GroupsActivity</string>

    // create group page
    <string name="createGroup_text_title">Create your group</string>
    <string name="createGroup_text_destination">Destination:</string>
    <string name="createGroup_text_hint_destination">Find destination</string>
    <string name="createGroup_text_total">Total members:</string>
    <string name="createGroup_text_current_number">1</string>
    <string name="createGroup_text_current">Current members:</string>
    <string name="createGroup_text_Date">Date:</string>
    <string name="createGroup_text_avgcost">Average Cost:</string>
    <string name="createGroup_text_note">Note:</string>
    <string name="createGroup_text_hint_Date">Select Date</string>


    <string name="createGroup_button_post">Post</string>
    <string name="createGroup_button_search">Search</string>
    <string name="createGroup_button_save">Save</string>
    <string name="createGroup_edittext_search">Enter your destination</string>

    // update group page
    <string name="updateGroup_text_title">Update your group</string>
    <string name="updateGroup_text_destination">Destination:</string>
    <string name="updateGroup_text_total">Total members:</string>
    <string name="updateGroup_text_current">Current members:</string>
    <string name="updateGroup_text_Date">Date:</string>
    <string name="updateGroup_text_avgcost">Average Cost:</string>
    <string name="updateGroup_text_note">Note:</string>
    <string name="updateGroup_button_post">Update</string>

    // groups page
    <string name="group_button_groups">Groups</string>
    <string name="group_button_Account">Account</string>
    <string name="group_text_total_number_members">Total:</string>
    <string name="group_text_current_number_members">out of</string>
    <string name="group_text_destination">Destination:</string>


    // update profile page
    <string name="updateProfile_text_title">Update your profile</string>
    <string name="updateProfile_text_username">Username:</string>
    <string name="updateProfile_text_mobile">Mobile:</string>
    <string name="updateProfile_text_email">Email:</string>
    <string name="updateProfile_text_picture">Picture:</string>
    <string name="updateProfile_button_update">Update profile</string>


    <string name="group_full_text_host">Host:</string>
    <string name="group_full_text_full">Full</string>

    <string name="switch_text_group">Groups</string>
    <string name="switch_text_created">Created</string>
    <string name="switch_text_joined">Joined</string>
    <string name="switch_text_account">Account</string>


</resources>