<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupActivity">

    <TextView
        android:id="@+id/groupInformationTextViewDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/groupInformation_text_Resort"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/groupInformationTextViewHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:text="@string/groupInformation_text_host"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupInformationTextViewDestination" />

    <ImageView
        android:id="@+id/groupInformationImageViewHostAvatar"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/googleg_standard_color_18"
        app:layout_constraintBottom_toBottomOf="@+id/groupInformationTextViewHost"
        app:layout_constraintStart_toEndOf="@+id/groupInformationTextViewHost"
        app:layout_constraintTop_toTopOf="@+id/groupInformationTextViewHost" />

    <TextView
        android:id="@+id/groupInformationTextViewHostName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/groupInformation_text_hostName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/groupInformationImageViewHostAvatar"
        app:layout_constraintStart_toEndOf="@+id/groupInformationImageViewHostAvatar"
        app:layout_constraintTop_toTopOf="@+id/groupInformationImageViewHostAvatar" />

    <TextView
        android:id="@+id/groupInformationTextViewEmail1"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/groupInformation_text_contact"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/groupInformationTextViewHost"
        app:layout_constraintTop_toBottomOf="@+id/groupInformationTextViewHost" />

    <TextView
        android:id="@+id/groupInformationTextViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/groupInformation_text_contactDetail"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/groupInformationTextViewEmail1"
        app:layout_constraintStart_toEndOf="@+id/groupInformationTextViewEmail1"
        app:layout_constraintTop_toTopOf="@+id/groupInformationTextViewEmail1" />

    <TextView
        android:id="@+id/groupInformationTextViewDistance1"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/groupInformation_text_distance"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/groupInformationTextViewEmail1"
        app:layout_constraintTop_toBottomOf="@+id/groupInformationTextViewEmail1" />

    <TextView
        android:id="@+id/groupInformationTextViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/groupInformation_text_distanceNumber"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/groupInformationTextViewDistance1"
        app:layout_constraintStart_toEndOf="@+id/groupInformationTextViewDistance1"
        app:layout_constraintTop_toTopOf="@+id/groupInformationTextViewDistance1" />

    <TextView
        android:id="@+id/groupInformationTextViewMembers"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/groupInformation_text_members"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/groupInformationTextViewDistance1"
        app:layout_constraintTop_toBottomOf="@+id/groupInformationTextViewDistance1" />

    <TextView
        android:id="@+id/groupInformationTextViewJoined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/groupInformation_text_joined"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/groupInformationTextViewMembers"
        app:layout_constraintTop_toBottomOf="@+id/groupInformationTextViewMembers" />

    <TextView
        android:id="@+id/groupInformationTextViewJoinedNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/groupInformation_text_joinedNumber"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/groupInformationTextViewJoined"
        app:layout_constraintStart_toEndOf="@+id/groupInformationTextViewJoined"
        app:layout_constraintTop_toTopOf="@+id/groupInformationTextViewJoined" />

    <TextView
        android:id="@+id/groupInformationTextViewJoinedOutOf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/groupInformation_text_joinedOutOf"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/groupInformationTextViewJoinedNumber"
        app:layout_constraintStart_toEndOf="@+id/groupInformationTextViewJoinedNumber"
        app:layout_constraintTop_toTopOf="@+id/groupInformationTextViewJoinedNumber" />

    <TextView
        android:id="@+id/groupInformationTextViewJoinedTotalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/groupInformation_text_joinedTotal"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/groupInformationTextViewJoinedOutOf"
        app:layout_constraintStart_toEndOf="@+id/groupInformationTextViewJoinedOutOf"
        app:layout_constraintTop_toTopOf="@+id/groupInformationTextViewJoinedOutOf" />

    <TextView
        android:id="@+id/groupInformationTextViewDate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/groupInformation_text_date"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/groupInformationTextViewJoined"
        app:layout_constraintTop_toBottomOf="@+id/groupInformationTextViewJoined" />

    <TextView
        android:id="@+id/groupInformationTextViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/groupInformation_text_dateDetail"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/groupInformationTextViewDate1"
        app:layout_constraintStart_toEndOf="@+id/groupInformationTextViewDate1"
        app:layout_constraintTop_toTopOf="@+id/groupInformationTextViewDate1" />

    <TextView
        android:id="@+id/groupInformationTextViewAverageCost1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/groupInformation_text_averageCost"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/groupInformationTextViewDate1"
        app:layout_constraintTop_toBottomOf="@+id/groupInformationTextViewDate1" />

    <TextView
        android:id="@+id/groupInformationTextViewAverageCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/groupInformation_text_averageCostNumber"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/groupInformationTextViewAverageCost1"
        app:layout_constraintStart_toEndOf="@+id/groupInformationTextViewAverageCost1"
        app:layout_constraintTop_toTopOf="@+id/groupInformationTextViewAverageCost1" />

    <TextView
        android:id="@+id/groupInformationTextViewNote1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:text="@string/groupInformation_text_note"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/groupInformationTextViewAverageCost1"
        app:layout_constraintTop_toBottomOf="@+id/groupInformationTextViewAverageCost1" />

    <TextView
        android:id="@+id/groupInformationTextViewNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/groupInformation_text_noteDetail"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/groupInformationTextViewNote1"
        app:layout_constraintTop_toTopOf="@+id/groupInformationTextViewNote1" />

    <Button
        android:id="@+id/groupInformationButtonJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/groupInformation_button_join"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupInformationTextViewNote" />


</androidx.constraintlayout.widget.ConstraintLayout>

